# whichwad

./: .gitignore  README.md  whichwad.sln  whichwad.vcxproj  whichwad.vcxproj.filters
src/: CMakeLists.txt  consolestyling.cpp  consolestyling.h  utils.cpp  utils.h  wad3reader.cpp  wad3reader.h  whichwad.cpp
